# claude_code_bridge

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  ccb  ccb.py  ccb_test  install.ps1  install.sh  package.json  readme_ar.md  readme_de.md  readme_en.md  readme_es.md  readme_fr.md  readme_ja.md  readme_ko.md  readme_pt.md  readme_ru.md
README/: ar.md  de.md  es.md  fr.md  ja.md  ko.md  pt.md  ru.md  zh.md
config/: ccb-tmux-on.sh  tmux-ccb.conf
desktop/: package.json
dev_tools/: perf_ccb_startup.py  perf_process_resources.py  perf_runtime_lifecycle_profile.py
docs/: ccb-agent-sidebar-integration-plan.md  ccb-config-layout-contract.md  ccb-provider-state-storage-boundary-plan.md  ccb-wsl-ask-stability-test-runbook.md  ccb-wsl-compatibility-plan.md  ccbd-diagnostics-contract.md  ccbd-lifecycle-stability-plan.md  ccbd-pane-recovery-continuous-attach-plan.md  ccbd-startup-supervision-contract.md  claude-session-isolation-contract.md  codex-session-isolation-contract.md  gemini-session-isolation-contract.md  managed-provider-completion-reliability-plan.md  mobile-cloudflare-alpha.md  mobile-cloudflare-alpha.zh.md  opencode-completion-contract.md  runtime-accelerator-pr-notes.md  runtime-accelerator.md
droid_skills/: ask.md
lib/: provider_command_defaults.py
lib/ccbd/: app.py  (+25 more)
mobile/: README.md
rust/: Cargo.toml
rust/crates/ccb-runtime-accelerator/: Cargo.toml
rust/crates/ccb-runtime-accelerator/src/: lib.rs  main.rs
scripts/: build_release.py  dynamic_agent_lifecycle_smoke.py  dynamic_layout_smoke.py  guarded_core_dynamic_layout_smoke.py  hindsight  (+8 more)
(+1007 files in other folders)
