[workspace]
resolver = "2"
members = [
    "crates/ccb-runtime-accelerator",
]

[workspace.package]
version = "7.6.18"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
